--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
   <!-- Your code here -->
-  <img src="...">
+  <img src="..." alt="...">
   <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg">
   <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="Roaring lion showing his big teeth">
 </body>
