--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
 
   <!-- Your code here -->
-  <img src="..." alt="...">
-  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg">
+  <img src="...">
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt>
   <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="Roaring lion showing his big teeth">
 </body>
 </html>
