--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <!-- Your code here -->
   <img src="...">
-  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt>
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="...">
   <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="Roaring lion showing his big teeth">
 </body>
 </html>
