Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
   <!-- Your code here -->
   <img src="...">
   <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="...">
-  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="Roaring lion showing his big teeth">
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="Roaring lion showing his big teeth" title="ROAR!">
 </body>
 </html>
